--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Simple Express project for easy spin-up, and framed to use GraphQL, PostgreSQL and REST.",
   "scripts": {
-    "start": "npx tsc && node ./build/app.js",
+    "start": "npx tsc && node ./build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
