--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Simple Express project for easy spin-up, and framed to use GraphQL, PostgreSQL and REST.",
   "scripts": {
     "start": "npx tsc && node ./build/index.js",
+    "debug": "ts-node ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,10 +26,12 @@
   },
   "homepage": "https://github.com/ocjadan/express-framed#readme",
   "dependencies": {
-    "express": "4.17.3"
+    "express": "4.17.3",
+    "axios": "0.26.1"
   },
   "devDependencies": {
     "typescript": "4.6.3",
+    "ts-node": "10.7.0",
     "@types/express": "4.17.13"
   }
 }
