--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple Express project for easy spin-up, and framed to use GraphQL, PostgreSQL and REST.",
   "scripts": {
     "start": "npx tsc && node ./build/index.js",
-    "debug": "ts-node ./src/index.ts",
+    "dev": "nodemon --watch src ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,11 +27,14 @@
   "homepage": "https://github.com/ocjadan/express-framed#readme",
   "dependencies": {
     "express": "4.17.3",
-    "axios": "0.26.1"
+    "axios": "0.26.1",
+    "graphql": "16.3.0",
+    "express-graphql": "0.12.0"
   },
   "devDependencies": {
+    "@types/express": "4.17.13",
     "typescript": "4.6.3",
     "ts-node": "10.7.0",
-    "@types/express": "4.17.13"
+    "nodemon": "2.0.15"
   }
 }
